# NivelamentoBraga

./: .gitignore  README.md  README_NIVELAMENTO.md  pyproject.toml
backend/migrations/: create.sql  import_data.sql  last_trimester.sql  last_year.sql  tests.sql
backend/src/api/: HTTP Collection for Tests  main.py
backend/src/pipeline/: __init__.py  data_fetch.py  data_prepare.py  data_transform.py
frontend/operadoras-frontend/: package-lock.json  package.json
frontend/operadoras-frontend/src/: App.vue
