[project]
name = "datapipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas M. Braga",email = "lucasmb.7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.poetry]
packages = [{include = "src", from = "backend"}]


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
